test/spec_vectors/simd_i16x8_arith/ok/module_12.wat
(module (func (export "add-sub") (param v128 v128 v128) (result v128) (i16x8.add (i16x8.sub (local.get 0) (local.get 1)) (local.get 2))) (func (export "mul-add") (param v128 v128 v128) (result v128) (i16x8.mul (i16x8.add (local.get 0) (local.get 1)) (local.get 2))) (func (export "mul-sub") (param v128 v128 v128) (result v128) (i16x8.mul (i16x8.sub (local.get 0) (local.get 1)) (local.get 2))) (func (export "sub-add") (param v128 v128 v128) (result v128) (i16x8.sub (i16x8.add (local.get 0) (local.get 1)) (local.get 2))) (func (export "add-neg") (param v128 v128) (result v128) (i16x8.add (i16x8.neg (local.get 0)) (local.get 1))) (func (export "mul-neg") (param v128 v128) (result v128) (i16x8.mul (i16x8.neg (local.get 0)) (local.get 1))) (func (export "sub-neg") (param v128 v128) (result v128) (i16x8.sub (i16x8.neg (local.get 0)) (local.get 1))))