test/spec_vectors/simd_i16x8_arith/fail/module_9.wat
(module (func $i16x8.sub-arg-empty (result v128) (i16x8.sub)))